--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -129,7 +129,8 @@
     <!-- <a href="kurv.html">kurv</a>
     <a href="blomster.html">blomster</a>
     <a href="vaser.html">vaser</a> -->
-
+    <a href="cookie.html">cookie</a>
+    <a href="nav.html">navigation</a>
     <!-- header -->
     <header>
       <div
@@ -360,7 +361,7 @@
 
       <!---------------------------------------------- FØRSTE SEKTION -->
       <section
-        class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xxl-spacing-desktop"
+        class="lg:pb-m2-spacing-desktop mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px]"
       >
         <!------------------------------- KNAP -->
 
