--- a/src/blomst_test.html
+++ b/src/blomst_test.html
@@ -75,7 +75,7 @@
       }
     </style>
   </head>
-  <body class="flex">
+  <body class="baggrundsbillede m-[100px] flex">
     <article class="hover:scale-105">
       <div class="article_wrapper" onclick="myFunction()">
         <div class="billede">
@@ -151,6 +151,7 @@
         </div>
       </div>
     </article>
+
     <article class="hover:scale-105">
       <div class="article_wrapper" onclick="myFunction()">
         <div class="billede">
