--- a/src/index.html
+++ b/src/index.html
@@ -310,7 +310,7 @@
         </a>
       </section>
 
-      <!-- NAVIGATION MOBIL -->
+      <!-- LOGO MOBIL -->
       <section tabindex="0" class="navigation_mobil">
         <a class="logo_mobil" href="index.html">
           <img
@@ -824,7 +824,7 @@
                   tabindex="0"
                   class="mx-auto w-1/2 text-center font-font-body text-body-mobile lg:text-body-desktop"
                 >
-                  “Abonnementløsningen lever altid op til mine forventninger.”
+                  “Abonnementløsningen lever altid op til mine forventninger!”
                 </p>
               </div>
               <div>
@@ -906,8 +906,7 @@
                   tabindex="0"
                   class="mx-auto w-1/2 text-center font-font-body text-body-mobile lg:text-body-desktop"
                 >
-                  “Jeg elsker at købe mine blomster i butikken, der er altid et
-                  sødt personale”
+                  “Blomster Bjarnes personale er altid venlige og smilende”
                 </p>
               </div>
               <div>
