--- a/src/index.html
+++ b/src/index.html
@@ -261,11 +261,7 @@
       }
     </style>
   </head>
-  <body
-    itemscope
-    itemtype="https://schema.org/OnlineStore"
-    itemtype="https://schema.org/ImageObject"
-  >
+  <body itemscope itemtype="https://schema.org/OnlineStore">
     <!-- virker kun i chrome  -->
     <a tabindex="0" class="skip-to-content-link" href="#section_1">
       Skip to content
