--- a/src/blomster.html
+++ b/src/blomster.html
@@ -37,9 +37,13 @@
         width: 150px;
         margin: auto;
       }
-      img {
-        max-height: 100%;
+      .billede_wrapper img {
         max-width: 100%;
+        max-height: 100%;
+      }
+      img {
+        height: 100%;
+        width: 100%;
       }
 
       .article_info {
