--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -21,7 +21,7 @@
 
       /* knap */
 
-      button {
+      .primary button {
         background-color: var(--color-primary-button-background);
         color: var(--color-primary-button-text);
         font-family: var(--button-text);
@@ -39,11 +39,11 @@
         height: 60px;
         gap: 10px;
       }
-      button:hover {
+      .primary button:hover {
         background-color: var(--color-primary-button-hover-background);
       }
       @media (min-width: 900px) {
-        button {
+        .primary button {
           font-size: var(--button-desktop);
           padding: 15px 60px;
           border-radius: var(--radius-desktop);
