--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -191,7 +191,7 @@
         </a>
       </section>
 
-      <!-- NAVIGATION MOBIL -->
+      <!-- LOGO MOBIL -->
       <section tabindex="0" class="navigation_mobil">
         <a class="logo_mobil" href="index.html">
           <img
@@ -259,10 +259,10 @@
               </button>
             </label>
             <ul class="underkat m-0">
-              <li>
+              <li class="pt-[0.18cm]">
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="blomster.html"
                   >Blomster</a
                 >
@@ -270,7 +270,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="vaser.html"
                   >Vaser</a
                 >
