--- a/src/blomster.html
+++ b/src/blomster.html
@@ -128,7 +128,7 @@
         </a>
       </section>
 
-      <!-- NAVIGATION MOBIL -->
+      <!-- LOGO MOBIL -->
       <section tabindex="0" class="navigation_mobil">
         <a class="logo_mobil" href="index.html">
           <img
@@ -196,10 +196,10 @@
               </button>
             </label>
             <ul class="underkat m-0">
-              <li>
+              <li class="pt-[0.18cm]">
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="blomster.html"
                   >Blomster</a
                 >
@@ -207,7 +207,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="vaser.html"
                   >Vaser</a
                 >
@@ -254,7 +254,7 @@
           <li>
             <img
               tabindex="0"
-              class="search max-h-100% h-8 w-8"
+              class="search h-8 w-8"
               src="img/ikoner/search.svg"
               alt="Søg"
             />
@@ -262,7 +262,6 @@
         </ul>
       </nav>
     </header>
-
     <!---------------------------------------------- HERO -->
     <section
       class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height"
