--- a/src/vaser.html
+++ b/src/vaser.html
@@ -136,7 +136,7 @@
         </a>
       </section>
 
-      <!-- NAVIGATION MOBIL -->
+      <!-- LOGO MOBIL -->
       <section tabindex="0" class="navigation_mobil">
         <a class="logo_mobil" href="index.html">
           <img
@@ -204,10 +204,10 @@
               </button>
             </label>
             <ul class="underkat m-0">
-              <li>
+              <li class="pt-[0.18cm]">
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="blomster.html"
                   >Blomster</a
                 >
@@ -215,7 +215,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="vaser.html"
                   >Vaser</a
                 >
@@ -262,7 +262,7 @@
           <li>
             <img
               tabindex="0"
-              class="search max-h-100% h-8 w-8"
+              class="search h-8 w-8"
               src="img/ikoner/search.svg"
               alt="Søg"
             />
