--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -126,11 +126,8 @@
     </style>
   </head>
   <body class="">
-    <!-- <a href="kurv.html">kurv</a>
-    <a href="blomster.html">blomster</a>
-    <a href="vaser.html">vaser</a> -->
     <a href="cookie.html">cookie</a>
-    <a href="nav.html">navigation</a>
+    <a href="logind.html">log ind</a>
     <!-- header -->
     <header>
       <div
@@ -309,14 +306,6 @@
         </ul>
       </nav>
     </header>
-    <!-- <div
-        class="grid gap-0.5 py-1 text-center font-font-body text-abonnement-text-info lg:flex lg:justify-around lg:text-body-mobile"
-      >
-        <p>Køb dine blomster i vores butikker</p>
-        <p>Bestil dit abonnement på vores webshop</p>
-        <p><a href="logind.html">Logind</a></p>
-        <p><a href="cookie.html">cookie</a></p>
-      </div> -->
 
     <!---------------------------------------------- HERO -->
     <main class="baggrundsbillede">
