--- a/src/blomster.html
+++ b/src/blomster.html
@@ -68,13 +68,13 @@
       @media (min-width: 900px) {
         /* card */
         article {
-          width: 250px;
+          width: 350px;
           height: 100%;
         }
 
         .billede_wrapper {
           width: 100%;
-          height: 200px;
+          height: 300px;
         }
       }
     </style>
@@ -270,7 +270,7 @@
         class="mx-10 border-2 border-himmel-500 pt-m-spacing-mobile pl-10 pr-10 text-himmel-500 lg:h-hero-border-height"
       >
         <h1
-          class="font-main-heading text-h1-mobile lg:pt-xl-spacing-desktop lg:text-h1-desktop"
+          class="font-main-heading text-h1-mobile lg:pt-l-spacing-desktop lg:text-h1-desktop"
         >
           Blomster
         </h1>
@@ -322,7 +322,7 @@
 
       <!---------------------------------------------- ANDEN SEKTION CARDS -->
       <section
-        class="lg:px[80px] flex flex-wrap justify-center gap-s-spacing-mobile lg:gap-l-spacing-desktop"
+        class="flex flex-wrap justify-center gap-s-spacing-mobile lg:gap-l-spacing-desktop lg:px-[80px]"
       >
         <!-- card -->
         <article class="hover:scale-105">
