--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,7 @@
     <a tabindex="0" class="skip-to-content-link" href="#section_1">
       Skip to content
     </a>
-    <!-- header -->
+    <!-------------------------------------------------------------------------------------------- HEADER -->
     <header>
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
@@ -268,7 +268,7 @@
         <p tabindex="0">Køb dine blomster i vores butikker</p>
         <p tabindex="0">Bestil dit abonnement på vores webshop</p>
       </div>
-      <!-- LOGO DESKTOP -->
+      <!-- LOGO DESKTOP START -->
       <section tabindex="0">
         <a class="navigation_desktop" href="index.html">
           <img
@@ -303,8 +303,9 @@
           />
         </a>
       </section>
+      <!-- LOGO DESKTOP SLUT -->
 
-      <!-- LOGO MOBIL -->
+      <!-- LOGO MOBIL START -->
       <section tabindex="0" class="navigation_mobil">
         <a class="logo_mobil" href="index.html">
           <img
@@ -343,7 +344,9 @@
           <button class="toggle-btn">☰</button>
         </div>
       </section>
+      <!-- LOGO MOBIL SLUT -->
 
+      <!-- MENUPUNKTER START -->
       <nav class="lg:flex">
         <ul>
           <li>
@@ -437,9 +440,10 @@
           </li>
         </ul>
       </nav>
+      <!-- MENUPUNKTER SLUT -->
     </header>
 
-    <!-- hero section -->
+    <!--------------------------------------------------------------------------------------------- HERO -->
     <section class="baggrundsbillede">
       <div
         class="lg:py-l-spacing-mobile lg:px-xxl-spacing-desktop lg:pb-m-spacing-desktop"
@@ -470,17 +474,23 @@
               Med et abonnement hos Blomster Bjarne får du leveret unikke
               buketter fra hver sæson.
             </p>
-            <div class="primary py-xl-spacing-mobile">
-              <button tabindex="0" class="mx-auto">
-                Tegn mit abonnement
-                <svg width="32" height="32" viewBox="0 0 24 24">
-                  <path
-                    fill="#ffffff"
-                    d="M13.3 17.275q-.3-.3-.288-.725q.013-.425.313-.725L16.15 13H5q-.425 0-.713-.288Q4 12.425 4 12t.287-.713Q4.575 11 5 11h11.15L13.3 8.15q-.3-.3-.3-.713q0-.412.3-.712t.713-.3q.412 0 .712.3L19.3 11.3q.15.15.213.325q.062.175.062.375t-.062.375q-.063.175-.213.325l-4.6 4.6q-.275.275-.687.275q-.413 0-.713-.3Z"
-                  />
-                </svg>
-              </button>
+            <!-- CTA START -->
+            <div
+              class="mx-auto mt-s-spacing-desktop flex h-[50px] w-[70%] items-center justify-center gap-xs-spacing-mobile rounded-radius-desktop bg-color-primary-button-background py-s-spacing-mobile drop-shadow-buttonshadow hover:cursor-pointer hover:bg-color-primary-button-hover-background lg:w-[65%]"
+            >
+              <a
+                class="font-button-text text-button-mobile text-color-white"
+                href="abonnement.html"
+                >Tegn mit abonnement</a
+              >
+              <svg class="" width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#ffffff"
+                  d="M13.3 17.275q-.3-.3-.288-.725q.013-.425.313-.725L16.15 13H5q-.425 0-.713-.288Q4 12.425 4 12t.287-.713Q4.575 11 5 11h11.15L13.3 8.15q-.3-.3-.3-.713q0-.412.3-.712t.713-.3q.412 0 .712.3L19.3 11.3q.15.15.213.325q.062.175.062.375t-.062.375q-.063.175-.213.325l-4.6 4.6q-.275.275-.687.275q-.413 0-.713-.3Z"
+                />
+              </svg>
             </div>
+            <!-- CTA SLUT -->
           </div>
         </div>
       </div>
@@ -500,6 +510,7 @@
       </div>
     </section>
 
+    <!-------------------------------------------------------------------------------------------- MAIN -->
     <main class="overflow-x-clip">
       <!-- section_1 -->
       <section id="section_1" class="bg_tekstur px-[30px] lg:px-[80px]">
@@ -537,7 +548,7 @@
         >
           <a
             tabindex="0"
-            class="flex flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+            class="flex flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px]"
             href=""
             >Se vores udvalg af blomster</a
           >
@@ -782,18 +793,30 @@
             </div>
           </article>
         </section>
-        <div tabindex="0" class="primary py-xl-spacing-mobile">
+
+        <!-- <div tabindex="0" class="primary py-xl-spacing-mobile">
           <button class="mx-auto">Udforsk sortimentet</button>
+        </div> -->
+
+        <div
+          class="flex justify-center py-xl-spacing-mobile lg:py-xl-spacing-desktop"
+        >
+          <a
+            tabindex="0"
+            class="flex flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px]"
+            href="blomster.html"
+            >Udforsk sortimentet</a
+          >
         </div>
       </section>
 
-      <!-- testimonials section_4 -->
+      <!-- section_4 -->
       <section
         class="bg_tekstur py-xxl-spacing-mobile px-[30px] shadow-inner lg:px-[80px]"
       >
         <h2
           tabindex="0"
-          class="pb-l-spacing-mobile text-center font-other-headings text-h2-mobile lg:text-h2-desktop"
+          class="text-center font-other-headings text-h2-mobile lg:text-h2-desktop"
         >
           Anmeldelser
         </h2>
@@ -959,7 +982,7 @@
       </section>
     </main>
 
-    <!-- footer -->
+    <!--------------------------------------------------------------------------------------------- FOOTER -->
     <footer
       tabindex="0"
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
@@ -967,7 +990,9 @@
       <article
         class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
       >
+        <!-- primær indhold -->
         <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
+          <!-- butikker -->
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
@@ -1002,6 +1027,7 @@
             </div>
           </section>
 
+          <!-- information links -->
           <section
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
@@ -1024,6 +1050,7 @@
             </div>
           </section>
 
+          <!-- åbningstider -->
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
@@ -1056,6 +1083,7 @@
             </div>
           </section>
 
+          <!-- følg os her links -->
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
@@ -1107,6 +1135,7 @@
           </section>
         </div>
 
+        <!-- sekundær indhold  -->
         <section
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
