--- a/src/vaser.html
+++ b/src/vaser.html
@@ -279,7 +279,7 @@
         class="mx-10 border-2 border-graes-300 pt-m-spacing-mobile pl-10 pr-10 text-graes-300 lg:h-hero-border-height"
       >
         <h1
-          class="font-main-heading text-h1-mobile lg:pt-xl-spacing-desktop lg:text-h1-desktop"
+          class="font-main-heading text-h1-mobile lg:pt-l-spacing-desktop lg:text-h1-desktop"
         >
           Vaser
         </h1>
