--- a/src/index.html
+++ b/src/index.html
@@ -275,31 +275,31 @@
             class="logo_lang"
             id="sort"
             src="img/logo/bb_logo_lang.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo sort forkortelse"
           />
           <img
             class="logo_lang"
             id="sol"
             src="img/logo/bb_logo_lang_sol.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo gul forkortelse"
           />
           <img
             class="logo_lang"
             id="graes"
             src="img/logo/bb_logo_lang.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo grøn forkortelse"
           />
           <img
             class="logo_lang"
             id="himmel"
             src="img/logo/bb_logo_lang_himmel.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo blå forkortelse"
           />
           <img
             class="logo_lang"
             id="rust"
             src="img/logo/bb_logo_lang_rust.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo orange forkortelse"
           />
         </a>
       </section>
@@ -312,31 +312,31 @@
             class="logo_kort"
             id="sort"
             src="img/logo/bb_logo_kort.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo sort "
           />
           <img
             class="logo_kort"
             id="sol"
             src="img/logo/bb_logo_kort_sol.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo gul"
           />
           <img
             class="logo_kort"
             id="graes"
             src="img/logo/bb_logo_kort_graes.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo grøn"
           />
           <img
             class="logo_kort"
             id="himmel"
             src="img/logo/bb_logo_kort_himmel.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo blå"
           />
           <img
             class="logo_kort"
             id="rust"
             src="img/logo/bb_logo_kort_rust.png"
-            alt="Blomster Bjarne logo"
+            alt="Blomster Bjarne logo orange"
           />
         </a>
 
