--- a/src/blomster.html
+++ b/src/blomster.html
@@ -326,6 +326,8 @@
 
       <!---------------------------------------------- ANDEN SEKTION CARDS -->
       <section
+        itemscope
+        itemtype="https://schema.org/Product"
         class="flex flex-wrap justify-center gap-s-spacing-mobile lg:gap-l-spacing-desktop lg:px-[80px]"
       >
         <!-- card -->
@@ -337,6 +339,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  itemprop="image"
                   src="/img/blomster/anthurium.webp"
                   alt="Anthurium blomst"
                 />
@@ -346,7 +349,7 @@
             <div
               class="border-t-2 border-t-color-black bg-color-white p-s-spacing-mobile text-center font-other-headings text-h5-mobile text-color-black lg:text-h5-desktop"
             >
-              <h3>Anthurium</h3>
+              <h3 itemprop="name">Anthurium</h3>
             </div>
           </div>
           <div class="article_info border-2 border-color-black bg-color-white">
@@ -368,6 +371,7 @@
                   alt="oprindelse ikon"
                 />
                 <h4
+                  itemprop="countryOfOrigin"
                   class="font-font-body text-body-mobile lg:text-body-desktop"
                 >
                   oprindelse
